GNOME Bugzilla – Bug 782449
Fails to build with exiv2-0.26
Last modified: 2017-06-30 13:38:31 UTC
Exiv2::BasicIo::size() changed its return type to size_t from long: http://dev.exiv2.org/issues/1175 That leads to: CXX gexiv2/libgexiv2_la-gexiv2-stream-io.lo In file included from gexiv2/gexiv2-stream-io.cpp:13:0: gexiv2/gexiv2-stream-io.h:42:15: error: conflicting return type specified for 'virtual long int StreamIo::size() const' virtual long size () const; ^~~~ In file included from gexiv2/gexiv2-stream-io.h:19:0, from gexiv2/gexiv2-stream-io.cpp:13: /usr/include/exiv2/basicio.hpp:225:24: error: overriding 'virtual size_t Exiv2::BasicIo::size() const' virtual size_t size() const = 0; ^~~~ Here is a build log: https://kojipkgs.fedoraproject.org//work/tasks/6096/19376096/build.log
Created attachment 351561 [details] [review] Adapt to Exiv2::BasicIo API change
Created attachment 351743 [details] [review] iostream: Adapt to new Exiv2 API in 0.26 Signed-off-by: Jens Georg <mail@jensge.org> I would go with this approach for the 0.10 stable version and use your patch for the unstable branch.
Created attachment 351745 [details] [review] iostream: Adapt to new Exiv2 API in 0.26 Whoops. Wrong version
Attachment 351745 [details] pushed as f295c5c - iostream: Adapt to new Exiv2 API in 0.26
Created attachment 354732 [details] [review] Adapt to Exiv2::BasicIo API change For the sake of completeness, I realized that I forgot to 'git add configure.ac'.