iostream: Adapt to new Exiv2 API in 0.26

https://bugzilla.gnome.org/show_bug.cgi?id=782449